# pomodoro-timer

./: .env.example  .gitignore  Makefile  README.md  dependency.py  docker-compose.yml  exeptions.py  main.py  pyproject.toml  settings.py
alembic/: env.py
app/: dependency.py  exeptions.py  settings.py
app/infrastructure/cache/: __init__.py  accessor.py
app/infrastructure/database/: __init__.py  accessor.py
app/tasks/: handlers.py  models.py  schema.py  service.py
app/tasks/repository/: __init__.py  cache_task.py  task.py
app/users/auth/: handlers.py  schema.py  service.py
app/users/auth/client/: __init__.py  google.py
app/users/user_profile/: handlers.py  models.py  repository.py  schema.py  service.py
cache/: accessor.py
client/: __init__.py  google.py
database/: __init__.py  accessor.py  database.py  models.py
handlers/: __init__.py  auth.py  tasks.py  users.py
infra/: gunicorn.conf.py
models/: __init__.py  tasks.py  users.py
repository/: cache_task.py  task.py  user.py
schema/: __init__.py  auth.py  task.py  user.py
scripts/: run.sh
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: settings.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_models.py  user_repository.py
tests/unit/users/auth/: test_auth_service.py
